# pymagicsquares

./: CITATION.cff  README.MD  pyproject.toml
src/: __init__.py
src/magicsquares2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
