[project]
name = "magicsquares2"
version = "0.0.1"
authors = [
  { name="Chameera Dedduwage", email="chameera.dedduwage@outlook.com" },
]
description = "A simple package to generate highly constrained 4x4 magic squares."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"